<resources>

    <string name="APP_NAME">Holonav</string>

    <string name="ACTION_manage_groups">Manage Groups</string>
    <string name="ACTION_contact_us">Contact Us</string>

    <!-- Unity -->
    <string name="game_view_content_description">Game view</string>
    <string name="title_activity_unity">unity</string>

    <!-- Titles -->
    <string name="TITLE_next">Next</string>
    <string name="TITLE_previous">Previous</string>
    <string name="TITLE_add_sub">Add Sub</string>
    <string name="TITLE_edit_sub">Edit Sub</string>
    <string name="TITLE_add_group">Add Group</string>
    <string name="TITLE_edit_group">Edit Group</string>
    <string name="TITLE_groupsManage">Manage Groups</string>
    <string name="TITLE_version">Version 1.1.5</string>

    <!-- Message -->
    <string name="MESSAGE_subs_empty_list">No substations to display</string>
    <string name="MESSAGE_groups_empty_list">No groups to display</string>
    <string name="MESSAGE_save_changes">Do you want to save changes ?</string>
    <string name="MESSAGE_are_you_sure">Are you sure ?</string>
    <string name="MESSAGE_riskArea_delete">Risk area will be deleted permanently</string>
    <string name="MESSAGE_will_be_delete">will be deleted permanently</string>

    <!-- Toasts -->
    <string name="TOAST_edit_block">Risk Area editing will be blocked while camera is tilt</string>
    <string name="TOAST_edit_enable">Risk Area editing is available</string>
    <string name="TOAST_permission">Required permission</string>
    <string name="TOAST_exiting">not granted, exiting</string>
    <string name="TOAST_support_las">Supports only .las file</string>
    <string name="TOAST_upload_las">Upload A substation .las file</string>
    <string name="TOAST_choose_name">Choose A substation name</string>
    <string name="TOAST_choose_group">Choose name for new group</string>
    <string name="TOAST_substation_named">Substation named</string>
    <string name="TOAST_group_named">Roll named</string>
    <string name="TOAST_already_exists">already exists</string>
    <string name="TOAST_cant_add_cube_in_3D">Cannot add risk area in 3D</string>
    <string name="TOAST_cant_add_cube_cause_no_groups">First, ADD GROUPS in main screen so you can attach later to the new risk area</string>
    <string name="TOAST_error">Error</string>
    <string name="TOAST_no_groups">No groups available, AD GROUPS in main screen menu</string>
    <string name="TOAST_no_risk_area_to_export">There are no risk areas to export</string>
    <string name="TOAST_no_GROUP_risk_area_to_export">There are no risk areas in the GROUP to export</string>
    <string name="TOAST_chose_group_to_export">Please choose a group first</string>
    <string name="TOAST_problem_export">Please choose a single group to export</string>
    <string name="TOAST_exporting_risk_areas_to_device">Exporting risk areas to device #</string>

    <!-- Android Buttons -->
    <string name="BUTTON_upload">Upload</string>
    <string name="BUTTON_done">Done</string>
    <string name="BUTTON_edit">Edit</string>
    <string name="BUTTON_remove">Remove</string>
    <string name="BUTTON_save">Save</string>
    <string name="BUTTON_add">Add</string>
    <string name="BUTTON_yes">Yes</string>
    <string name="BUTTON_no">No</string>
    <string name="BUTTON_cancel">Cancel</string>

    <!-- Unity Buttons -->
    <string name="BUTTON_U_back">BACK</string>
    <string name="BUTTON_U_tilt_plus">TILT +</string>
    <string name="BUTTON_U_cam_reset">CAM RESET</string>
    <string name="BUTTON_U_tilt_minus">TILT -</string>
    <string name="BUTTON_U_add_layers">ADD LAYERS</string>
    <string name="BUTTON_U_remove_layers">REMOVE LAYERS</string>
    <string name="BUTTON_U_new_risk_area">NEW RISK AREA</string>
    <string name="BUTTON_U_export">EXPORT</string>
    <string name="BUTTON_U_choose_group">GROUP</string>
    <string name="BUTTON_U_height_plus">HEIGHT +</string>
    <string name="BUTTON_U_height_minus">HEIGHT -</string>
    <string name="BUTTON_U_move_up">MOVE UP</string>
    <string name="BUTTON_U_move_down">MOVE DOWN</string>
    <string name="BUTTON_U_delete">DELETE</string>

    <!-- Hints -->
    <string name="HINT_sub_name">Name</string>
    <string name="HINT_sub_path">3D Model Path</string>

    <!-- other -->
    <string name="OTHER_lost_signal">Lost signal</string>
</resources>
